# TLM_Analyzer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  appconfig.cpp  calculator.cpp  config.json  csvprocessor.cpp  datamanager.cpp  datapointmodel.cpp  main.cpp  mainwindow.cpp  qml.qrc  source.qrc  tlmanalyzer.cpp
include/: appconfig.h  calculator.h  csvprocessor.h  datamanager.h  datapoint.h  datapointmodel.h  mainwindow.h  tlmanalyzer.h
qml/: App.qml  ChartData.qml  Implementation.qml  Main.qml  MainUI.qml
test_data/: 14.csv  2.csv  22.csv  32.csv  4.csv  44.csv  8.csv
